Update Les dictionnaires - Tableaux associatifs.ipynb

--- a/Les dictionnaires - Tableaux associatifs.ipynb
+++ b/Les dictionnaires - Tableaux associatifs.ipynb
@@ -565,7 +565,7 @@
     "import os\n",
     "print(\"Le repertoire courant est : \", os.getcwd(),'\\n')\n",
     "# Ouverture d'une image pour lecture (en mode binaire)\n",
-    "f = open(\"./projet_mot_de_passe/ma_photo.jpg\", 'rb')\n",
+    "f = open(\"ma_photo.jpg\", 'rb')\n",
     "\n",
     "# Retourne les Exif dans un dictionnaire (variable tags)\n",
     "tags = exifread.process_file(f)\n",
