--- a/Les dictionnaires - Tableaux associatifs.ipynb
+++ b/Les dictionnaires - Tableaux associatifs.ipynb
@@ -27,8 +27,8 @@
     }
    },
    "source": [
-    "<h4 class=\"alert alert-info\">\n",
-    "Définition : Les dictionnaires.</h4>"
+    "<h2 class=\"alert alert-info\">\n",
+    "Définition : Les dictionnaires</h2>"
    ]
   },
   {
@@ -67,7 +67,7 @@
     }
    },
    "source": [
-    "<h4 class=\"alert alert-info\">Utilisation des dictionnaires.</h4>"
+    "<h2 class=\"alert alert-info\">Utilisation des dictionnaires</h2>"
    ]
   },
   {
@@ -118,8 +118,8 @@
     "hidePrompt": true
    },
    "source": [
-    "<h4 class=\"alert alert-info\">\n",
-    " Accès à une valeur du dictionnaire à partir d'une clef</h4>"
+    "<h2 class=\"alert alert-info\">\n",
+    " Accès à une valeur du dictionnaire à partir d'une clef</h2>"
    ]
   },
   {
@@ -246,21 +246,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
    "source": [
-    "<h4 class=\"alert alert-info\">\n",
-    "Parcours des valeurs d'un dictionnaire</h4>"
+    "<h2 class=\"alert alert-info\">\n",
+    "Parcours des valeurs d'un dictionnaire</h2>"
    ]
   },
   {
@@ -425,10 +417,10 @@
     "hidePrompt": true
    },
    "source": [
-    "<h4 class=\"alert alert-info\">Application aux données exif d'une image :</h4>\n",
+    "<h2 class=\"alert alert-info\">Application aux données exif d'une image :</h2>\n",
     "\n",
-    "Pour consulter les données exif d'une photo on peut utiliser le module <code>exifread</code> qui s'installe en ligne de commande par : \n",
-    "$pip3 install exifread.<br/>\n",
+    "Pour consulter les données exif d'une photo on peut utiliser le module <code>exifread</code> qui s'installe en ligne de commande par : <br/>\n",
+    "<code>$pip3 install exifread.</code><br/>\n",
     "Les données exif peuvent alors être récupérées sous forme de dictionnaire. Comme dans le code suivant :"
    ]
   },
@@ -605,8 +597,8 @@
     "hidePrompt": true
    },
    "source": [
-    "<h4 class=\"alert alert-info\">\n",
-    "Les types de clefs</h4>"
+    "<h2 class=\"alert alert-info\">\n",
+    "Les types de clefs</h2>"
    ]
   },
   {
@@ -759,8 +751,8 @@
     "hidePrompt": true
    },
    "source": [
-    "<h4 class=\"alert alert-info\">\n",
-    "Modification de valeur</h4>"
+    "<h2 class=\"alert alert-info\">\n",
+    "Modification de valeur</h2>"
    ]
   },
   {
@@ -917,9 +909,9 @@
     "hidePrompt": true
    },
    "source": [
-    "<p class=\"alert alert-warning\">Travail demandé n°2 :<br/>\n",
-    "1.Reprendre les donnees exif de la photo vue ci-dessus et modifier le Copyright en ajoutant ton nom.<br/>\n",
-    "2.Afficher à nouveau les données et vérifier qu'elles ont bien été modifées."
+    "<p class=\"alert alert-warning\"><u>Travail demandé n°2 :</u><br/>\n",
+    "1.Reprends les donnees exif de la photo vue ci-dessus et modifie le Copyright en ajoutant ton nom.<br/>\n",
+    "2.Affiche à nouveau les données et vérifie qu'elles ont bien été modifées."
    ]
   },
   {
@@ -929,7 +921,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<h4 class=\"alert alert-info\">Création en compréhension</h4>"
+    "<h2 class=\"alert alert-info\">Création en compréhension</h2>"
    ]
   },
   {
@@ -1031,7 +1023,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<p class=\"alert alert-warning\">Travail demandé n°3 :<br/>\n",
+    "<p class=\"alert alert-warning\"><u>Travail demandé n°3 :</u><br/>\n",
     "On considère la chaîne de caractère (string) :<br/><br/>\n",
     "\" >La caméra volante nous pistait depuis notre entrée\n",
     "<br/>sur l'anneau périphérique. Dès la rampe, j'avais décon-<br/>necté le pilote et poussé le bobsleigh à deux cents -\"<br/><br/>\n",
@@ -1044,7 +1036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution:"
+    "<u>Solution:</u>"
    ]
   },
   {
@@ -1100,7 +1092,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<p class=\"alert alert-warning\">Travail demandé n°4 : chiffrement d'un message.<br/>\n",
+    "<p class=\"alert alert-warning\"><u>Travail demandé n°4 : chiffrement d'un message.</u><br/>\n",
     "1.Créer un dictionnaire dans lequel chaque lettre de l'alphabet est une clef, et sa valeur est une lettre différente.<br/>\n",
     "2.Réécrire la string <span class='inline_code'>chaine</span> avec ce nouvel alphabet.<br/>\n",
     "3.A quelle condition le message est-il facilement déchiffrable ?<br/>\n",
