--- a/Les dictionnaires - Tableaux associatifs.ipynb
+++ b/Les dictionnaires - Tableaux associatifs.ipynb
@@ -325,13 +325,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Possibly corrupted field Tag 0x1490 in MakerNote IFD\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le repertoire courant est :  /mnt/Datas/00-MATHS/1-LYCEE/01-NSI/01-Cours/00-MonCours/00-Dictionnaires \n",
+      "\n",
+      "                                 RUBRIQUE  |  VALEUR\n",
+      "----------------------------------------------------------------------\n",
+      "                   Image ImageDescription  :                                      \n",
+      "                               Image Make  :  NIKON CORPORATION\n",
+      "                              Image Model  :  NIKON D600\n",
+      "                        Image Orientation  :  Horizontal (normal)\n",
+      "                        Image XResolution  :  300\n",
+      "                        Image YResolution  :  300\n",
+      "                     Image ResolutionUnit  :  Pixels/Inch\n",
+      "                           Image Software  :  GIMP 2.10.18\n",
+      "                           Image DateTime  :  2020:05:04 13:24:17\n",
+      "                             Image Artist  :                                      \n",
+      "                   Image YCbCrPositioning  :  Co-sited\n",
+      "                          Image Copyright  :                     , ... ]\n",
+      "                         Image ExifOffset  :  394\n",
+      "                         GPS GPSVersionID  :  [2, 3, 0, 0]\n",
+      "                            Image GPSInfo  :  15010\n",
+      "                     Thumbnail ImageWidth  :  256\n",
+      "                    Thumbnail ImageLength  :  170\n",
+      "                  Thumbnail BitsPerSample  :  [8, 8, 8]\n",
+      "                    Thumbnail Compression  :  JPEG (old-style)\n",
+      "      Thumbnail PhotometricInterpretation  :  6\n",
+      "                Thumbnail SamplesPerPixel  :  3\n",
+      "          Thumbnail JPEGInterchangeFormat  :  15136\n",
+      "    Thumbnail JPEGInterchangeFormatLength  :  9341\n",
+      "                        EXIF ExposureTime  :  1/400\n",
+      "                             EXIF FNumber  :  63/10\n",
+      "                     EXIF ExposureProgram  :  Aperture Priority\n",
+      "                     EXIF ISOSpeedRatings  :  200\n",
+      "                     EXIF SensitivityType  :  Recommended Exposure Index\n",
+      "                         EXIF ExifVersion  :  0230\n",
+      "                    EXIF DateTimeOriginal  :  2020:02:18 11:17:13\n",
+      "                   EXIF DateTimeDigitized  :  2020:02:18 11:17:13\n",
+      "             EXIF ComponentsConfiguration  :  YCbCr\n",
+      "              EXIF CompressedBitsPerPixel  :  4\n",
+      "                   EXIF ExposureBiasValue  :  0\n",
+      "                    EXIF MaxApertureValue  :  1\n",
+      "                        EXIF MeteringMode  :  Pattern\n",
+      "                         EXIF LightSource  :  Unknown\n",
+      "                               EXIF Flash  :  Flash did not fire, compulsory flash mode\n",
+      "                         EXIF FocalLength  :  24\n",
+      "                           EXIF MakerNote  :  [78, 105, 107, 111, 110, 0, 2, 16, 0, 0, 77, 77, 0, 42, 0, 0, 0, 8, 0, 56, ... ]\n",
+      "                         EXIF UserComment  :                                      \n",
+      "                          EXIF SubSecTime  :  10\n",
+      "                  EXIF SubSecTimeOriginal  :  10\n",
+      "                 EXIF SubSecTimeDigitized  :  10\n",
+      "                     EXIF FlashPixVersion  :  0100\n",
+      "                          EXIF ColorSpace  :  sRGB\n",
+      "                      EXIF ExifImageWidth  :  4512\n",
+      "                     EXIF ExifImageLength  :  3008\n",
+      "                       EXIF SensingMethod  :  One-chip color area\n",
+      "                          EXIF FileSource  :  Digital Camera\n",
+      "                           EXIF SceneType  :  Directly Photographed\n",
+      "                          EXIF CVAPattern  :  [0, 2, 0, 2, 0, 1, 1, 2]\n",
+      "                      EXIF CustomRendered  :  Normal\n",
+      "                        EXIF ExposureMode  :  Auto Exposure\n",
+      "                        EXIF WhiteBalance  :  Auto\n",
+      "                    EXIF DigitalZoomRatio  :  1\n",
+      "               EXIF FocalLengthIn35mmFilm  :  24\n",
+      "                    EXIF SceneCaptureType  :  Standard\n",
+      "                         EXIF GainControl  :  None\n",
+      "                            EXIF Contrast  :  Normal\n",
+      "                          EXIF Saturation  :  Normal\n",
+      "                           EXIF Sharpness  :  Normal\n",
+      "                EXIF SubjectDistanceRange  :  0\n",
+      "                     MakerNote Tag 0x6326  :  []\n",
+      "                     MakerNote Tag 0x0000  :  []\n",
+      "                     MakerNote Tag 0x030C  :  []\n",
+      "                     MakerNote Tag 0x94E2  :  []\n",
+      "                     MakerNote Tag 0x4101  :  []\n",
+      "                     MakerNote Tag 0xB280  :  []\n",
+      "                     MakerNote Tag 0x45C2  :  []\n",
+      "            MakerNote ImageAuthentication  :  []\n",
+      "                     MakerNote Tag 0x1490  :  b'\\x8d\\xfb\\xc9va\\xe4n\\xbfZ\\xda'\n",
+      "                     MakerNote Tag 0x0910  :  []\n",
+      "                     MakerNote Tag 0x29A4  :  []\n",
+      "                     MakerNote Tag 0x9020  :  []\n",
+      "                     MakerNote Tag 0x4002  :  []\n",
+      "                     MakerNote Tag 0x5200  :  []\n",
+      "                     MakerNote Tag 0x0050  :  []\n",
+      "                     MakerNote Tag 0x0040  :  []\n",
+      "                     MakerNote Tag 0x1401  :  []\n",
+      "                     MakerNote Tag 0x01A0  :  []\n",
+      "                     MakerNote Tag 0x1000  :  []\n",
+      "                     MakerNote DigitalICE  :  []\n",
+      "                     MakerNote Tag 0x1045  :  []\n",
+      "                     MakerNote Tag 0x0224  :  []\n",
+      "                     MakerNote Tag 0x4050  :  []\n",
+      "                     MakerNote Tag 0x4012  :  []\n",
+      "                     MakerNote Tag 0x4011  :  []\n",
+      "                     MakerNote Tag 0x0028  :  []\n",
+      "                     MakerNote Tag 0x0900  :  []\n",
+      "                     MakerNote Tag 0x5667  :  []\n",
+      "                     MakerNote Tag 0xAB13  :  []\n",
+      "                     MakerNote Tag 0x2041  :  \n",
+      "                     MakerNote Tag 0x8514  :  []\n",
+      "                     MakerNote Tag 0x0180  :  []\n",
+      "                     MakerNote Tag 0x2804  :  []\n",
+      "                     MakerNote Tag 0x5109  :  []\n",
+      "                     MakerNote Tag 0x56D7  :  []\n",
+      "                     MakerNote Tag 0x2B01  :  []\n",
+      "                     MakerNote Tag 0x080A  :  []\n",
+      "                     MakerNote Tag 0x1204  :  []\n",
+      "                     MakerNote Tag 0x002C  :  []\n",
+      "                     MakerNote Tag 0xA422  :  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ... ]\n",
+      "                     MakerNote Tag 0x80D4  :  []\n",
+      "                     MakerNote Tag 0x05A4  :  []\n",
+      "                     MakerNote Tag 0x009D  :  []\n",
+      "                     MakerNote Tag 0x8400  :  \n",
+      "                     MakerNote Tag 0x48A0  :  []\n",
+      "                     MakerNote Tag 0x85B2  :  []\n",
+      "                     MakerNote Tag 0x000A  :  []\n"
+     ]
+    }
+   ],
    "source": [
     "import exifread\n",
     "import os\n",
@@ -385,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -398,12 +526,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Feuille'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from random import randint\n",
     "\n",
@@ -423,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -436,24 +575,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fiche_adherent['Lucie',24][0] renvoie :  15.1\n"
+     ]
+    }
+   ],
    "source": [
     "#Classement de l 'adhérent.e (on remarquera que sauf en cas d'ambiguité, les \n",
     "# parenthèses ne sont pas nécessaires pour appeler un tuple)\n",
-    "print(\"fiche_adherent['Lucie',24][0] renvoie : \",fiche_adherent['Lucie',24][0])\n",
+    "print(\"fiche_adherent['Lucie',24][0] renvoie : \",fiche_adherent['Lucie',24][0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p class=\"alert alert-warning\"><u>Travail demandé n°2 :</u><br/>\n",
+    "Dans la cellule ci-dessous, écrire un programme avec une boucle réalisant l'affichage suivant :\n",
     "\n",
+    "![Image](fichier_adherent.png)\n",
+    "\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n",
+      "Fichier des adhérent.e.s :\n"
+     ]
+    }
+   ],
+   "source": [
     "#Etat de la cotisation annuelle :\n",
     "print(\"\\r\") #Retour à la ligne\n",
-    "print(\"Fichier des adhérent.e.s :\")\n",
-    "for adherent,informations in fiche_adherent.items():\n",
-    "    print(adherent[0]+'('+str(int(adherent[1]))+')'\n",
-    "          +'\\t-->\\tclassement : '+str(informations[0])\n",
-    "          +'\\t cotisation : '+informations[1])"
+    "print(\"Fichier des adhérent.e.s :\")"
    ]
   },
   {
@@ -469,12 +640,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-e0ce2bea025f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdico\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": [
     "dico={[1,2]:'a'}"
    ]
@@ -502,12 +685,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Si Lucie améliore sont classement on met à jour le dictionnaire :\n",
     "fiche_adherent[('Lucie',24)]=(15.0,'à jour de cotisation')\n",
@@ -527,12 +718,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'Pierre', 2: 'Feuille', 3: 'Ciseaux', 4: 'Puits'}\n"
+     ]
+    }
+   ],
    "source": [
     "#Si on veut rajouter le puits au shifumi, on rajoute une clef 4 et sa valeur \"Puits\" :\n",
     "shifumi[4]=\"Puits\"\n",
@@ -552,25 +751,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fruit\n"
+     ]
+    }
+   ],
    "source": [
+    "#Créons une liste pour notre exemple :\n",
     "liste_nature=['arbre','fruit','feuille']\n",
     "print(liste_nature[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-f673da543b9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#On voudrait rajouter un élément au rang suivant (3) de la liste en faisant :\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mliste_nature\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'fleur'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
    "source": [
     "#On voudrait rajouter un élément au rang suivant (3) de la liste en faisant :\n",
     "liste_nature[3]='fleur'"
@@ -578,12 +798,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['arbre', 'fruit', 'feuille', 'fleur']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Il aurait fallu écrire :\n",
     "liste_nature.append('fleur')\n",
@@ -597,7 +828,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<p class=\"alert alert-warning\"><u>Travail demandé n°2 :</u><br/>\n",
+    "<p class=\"alert alert-warning\"><u>Travail demandé n°3 :</u><br/>\n",
     "1.Reprends les donnees exif de la photo vue ci-dessus et modifie le Copyright en ajoutant ton nom.<br/>\n",
     "2.Affiche à nouveau les données et vérifie qu'elles ont bien été modifées."
    ]
@@ -625,12 +856,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dans la table ascii 65 correspond au caractère A\n",
+      "Table ascii par lettre :\n",
+      "{'A': 65, 'B': 66, 'C': 67, 'D': 68, 'E': 69, 'F': 70, 'G': 71, 'H': 72, 'I': 73, 'J': 74, 'K': 75, 'L': 76, 'M': 77, 'N': 78, 'O': 79, 'P': 80, 'Q': 81, 'R': 82, 'S': 83, 'T': 84, 'U': 85, 'V': 86, 'W': 87, 'X': 88, 'Y': 89, 'Z': 90}\n"
+     ]
+    }
+   ],
    "source": [
     "# chr(n) renvoie le caractère ascii correspondant à un entier.\n",
     "print(\"Dans la table ascii 65 correspond au caractère\",chr(65))\n",
@@ -644,12 +885,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L'entier correspondant au caractère a dans la table ascii est 97\n",
+      "Table ascii par numéro :\n",
+      "{97: 'a', 98: 'b', 99: 'c', 100: 'd', 101: 'e', 102: 'f', 103: 'g', 104: 'h', 105: 'i', 106: 'j', 107: 'k', 108: 'l', 109: 'm', 110: 'n', 111: 'o', 112: 'p', 113: 'q', 114: 'r', 115: 's', 116: 't', 117: 'u', 118: 'v', 119: 'w', 120: 'x', 121: 'y', 122: 'z'}\n"
+     ]
+    }
+   ],
    "source": [
     "#Ou à l'inverse avec la fonction ord() qui renvoie l'entier correponsdant à un caractère ascii :\n",
     "print(\"L'entier correspondant au caractère a dans la table ascii est\",ord('a'))\n",
@@ -661,12 +912,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l'alphabet est : abcdefghijklmnopqrstuvwxyz\n"
+     ]
+    }
+   ],
    "source": [
     "#Remarque :\n",
     "############\n",
@@ -683,7 +942,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<p class=\"alert alert-warning\"><u>Travail demandé n°3 :</u><br/>\n",
+    "<p class=\"alert alert-warning\"><u>Travail demandé n°4 :</u><br/>\n",
     "On considère la chaîne de caractère (string) :<br/><br/>\n",
     "\" >La caméra volante nous pistait depuis notre entrée\n",
     "<br/>sur l'anneau périphérique. Dès la rampe, j'avais décon-<br/>necté le pilote et poussé le bobsleigh à deux cents -\"<br/><br/>\n",
@@ -701,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -718,7 +977,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<p class=\"alert alert-warning\"><u>Travail demandé n°4 : chiffrement d'un message.</u><br/>\n",
+    "<p class=\"alert alert-warning\"><u>Travail demandé n°5 : chiffrement d'un message.</u><br/>\n",
     "1.Créer un dictionnaire dans lequel chaque caractère est une clef, et sa valeur est un caractère différent.<br/>\n",
     "2.Réécrire la string <span class='inline_code'>chaine</span> avec ce nouvel alphabet.<br/>\n",
     "3.A quelle condition le message est-il facilement déchiffrable ?<br/>\n",
