Petites modifs sur README.md

--- a/Types_construits/Les_dictionnaires/Les dictionnaires - Tableaux associatifs.ipynb
+++ b/Types_construits/Les_dictionnaires/Les dictionnaires - Tableaux associatifs.ipynb
@@ -7,7 +7,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<h4>Le but de ce document est de présenter les <span class=\"inline_code\">dictionnaires</span> python.</h4>"
+    "<h4>Le but de ce document est de présenter les <b>dictionnaires</b> python.</h4>"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "hideCode": false,
     "hideOutput": false,
@@ -81,7 +81,15 @@
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Pierre': 17, 'Paul': 15, 'Jacques': 16}\n"
+     ]
+    }
+   ],
    "source": [
     "#définition d'un dictionnaire\n",
     "age_eleve = {'Pierre':17, 'Paul':15,'Jacques':16}\n",
@@ -121,7 +129,7 @@
     "hidePrompt": true
    },
    "source": [
-    "#Pour connaître l'âge de Pierre on écrit :\n",
+    "Pour connaître l'âge de Pierre on écrit :\n",
     "age_eleve[\"Pierre\"]"
    ]
   },
@@ -486,7 +494,7 @@
    "source": [
     "<p class=\"alert alert-warning\"><u>Travail demandé n°1 :</u><br/>\n",
     "1.Munis-toi d'une photo au format compressé jpeg et place-la dans le même répertoire que ce document sous le nom \"ma_photo.jpg\"<br/>\n",
-    "2. A l'aide du code ci-dessus, retrouve et affiche les dates de prise de vue, la largeur et la hauteur, la durée d'exposition, l'ouverture (aperture).<br/>\n",
+    "2. A l'aide du code ci-dessus, retrouve et affiche les dates de prise de vue, la largeur et la hauteur, la durée d'exposition, l'ouverture (FNumber).<br/>\n",
     "3. Pendant combien de temps l'obturateur s'est-il ouvert durant la prise de vue ? </p>"
    ]
   },
@@ -616,7 +624,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r\n",
+      "\n",
       "Fichier des adhérent.e.s :\n"
      ]
     }
@@ -1029,9 +1037,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
