--- a/Types_construits/Les_dictionnaires/20-feuille-python-les-dictionnaires.ipynb
+++ b/Types_construits/Les_dictionnaires/20-feuille-python-les-dictionnaires.ipynb
@@ -15,10 +15,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p class=\"alert alert-success\">Les dictionnaires se parcourent en Python comme les listes et les tuples.</p>"
+    "<p class=\"alert alert-warning\">Les dictionnaires se parcourent en Python comme les listes et les tuples.</p>"
    ]
   },
   {
@@ -453,54 +453,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parfait(nb):\n",
-    "    deja=set()\n",
-    "    while not (nb in deja):\n",
-    "        deja.add(nb)\n",
-    "        str_nb=str(nb)\n",
-    "        somme=0\n",
-    "        for chiffre in str_nb:\n",
-    "            somme+=int(chiffre)**2\n",
-    "        nb=somme\n",
-    "        print( deja, \"<--\",nb)\n",
-    "    if 1 in deja:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "parfait(23)"
+    "def heureux(nb):\n",
+    "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{23} <-- 13\n",
-      "{13, 23} <-- 10\n",
-      "{10, 13, 23} <-- 1\n",
-      "{1, 10, 13, 23} <-- 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
