--- a/Tris/airports_part1.ipynb
+++ b/Tris/airports_part1.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aéroports du monde\n",
-    "\n",
-    "\n",
+    "<h1 class=\"alert alert-success\"> Aéroports du monde</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En prenant pour prétexte un fichier de données recensant un très grands nombre d'aéroports, nous allons travailler les méthodes vues en cours pour : \n",
     "- importer un fichier csv\n",
     "- sélectionner des données\n",
@@ -19,12 +23,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1) Pour commencer : fichier que nous allons exploiter"
+    "<h2 class=\"alert alert-info\">1) Chargement du fichier que nous allons exploiter</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,23 +43,36 @@
     "    fichier_csv = open( nom_fic , \"r\", newline =\"\", encoding =\"utf-8\" )\n",
     "    lecteur_fichier = csv.DictReader( fichier_csv , delimiter =\",\")    \n",
     "    for enreg in lecteur_fichier :\n",
-    "        table.append (dict ( enreg )) # enreg est de type OrderedDict on le remet en dict\n",
+    "        table.append (dict ( enreg )) # enreg est de type OrderedDict on le remet endict\n",
     "    fichier_csv.close()    \n",
     "    return table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './airports/airports.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-9db47335f8e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtable_aeroports\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcharger_fichier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./airports/airports.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-58a679418dc7>\u001b[0m in \u001b[0;36mcharger_fichier\u001b[0;34m(nom_fic)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \"\"\"\n\u001b[1;32m      8\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mfichier_csv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mnom_fic\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mlecteur_fichier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDictReader\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mfichier_csv\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0menreg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlecteur_fichier\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './airports/airports.csv'"
+     ]
+    }
+   ],
    "source": [
     "table_aeroports = charger_fichier('./airports/airports.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +89,7 @@
        " 'Altitude': '4'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +126,6 @@
    "source": [
     "<div class = \"alert alert-warning\">  \n",
     "\n",
-    "\n",
     "**Question**  \n",
     "\n",
     "En exécutant une instruction bien choisie, déterminer combien d'enregistrements (c-à-d de lignes) contient cette table ?"
@@ -130,7 +146,6 @@
    "source": [
     "<div class = \"alert alert-warning\">  \n",
     "\n",
-    "\n",
     "**Question**  \n",
     "- Afficher tout l'enregistrement d'indice 1111 de cette table. \n",
     "\n",
@@ -143,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +170,6 @@
    "metadata": {},
    "source": [
     "<div class = \"alert alert-warning\">  \n",
-    "\n",
     "\n",
     "**Question**  \n",
     "\n",
@@ -178,12 +192,12 @@
     "<div class = \"alert alert-danger\">\n",
     "\n",
     "\n",
-    "### MISE EN GARDE N°1\n",
+    "## MISE EN GARDE N°1\n",
     "\n",
     "Rappelez vous que les valeurs de tous les champs sont de type `str` et qu'il faut les convertir en `float` ou en `int` si besoin (et le besoin sera très souvent là).  \n",
     "    \n",
     "\n",
-    "### MISE EN GARDE N°2\n",
+    "## MISE EN GARDE N°2\n",
     "\n",
     "On appellera **table** une `list` de `dict` python (c'est à dire un tableau de p-uplets nommés en langage \"algorithmique\")."
    ]
@@ -192,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2) rechercher des données"
+    "<h2 class=\"alert alert-info\"> 2) Rechercher des données</h2>"
    ]
   },
   {
@@ -200,7 +214,6 @@
    "metadata": {},
    "source": [
     "<div class = \"alert alert-warning\">  \n",
-    "\n",
     "\n",
     "**Question**  \n",
     "\n",
@@ -220,8 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class = \"alert alert-warning\">  \n",
-    "    \n",
+    "<div class = \"alert alert-warning\">      \n",
     "    \n",
     "**Question**  \n",
     "Les types d'aéroports apparaissent plusieurs fois dans cette liste. Ce qui est gênant.  \n",
@@ -271,7 +283,6 @@
    "source": [
     "<div class = \"alert alert-warning\">  \n",
     "\n",
-    "\n",
     "**Question**  \n",
     "\n",
     "En une seule instruction, à partir de la table `table_aeroports`, créer la **table** `table_large_airports` de tous les aéroports de type `large_airport`.\n",
@@ -295,7 +306,6 @@
    "source": [
     "<div class = \"alert alert-warning\">  \n",
     "\n",
-    "\n",
     "**Question**  \n",
     "\n",
     "En une seule instruction, à partir de la table `table_aeroports`, créer la **table** `table_large_airports_FR` de tous les aéroports de type `large_airport` situés en France (`Country_Code` égal à `FR`).\n",
@@ -317,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3) trier des données"
+    "<h2 class=\"alert alert-info\"> 3) trier des données</h2>"
    ]
   },
   {
@@ -325,7 +335,6 @@
    "metadata": {},
    "source": [
     "<div class = \"alert alert-warning\">  \n",
-    "\n",
     "\n",
     "**Question**  \n",
     "\n",
@@ -351,7 +360,6 @@
    "source": [
     "<div class = \"alert alert-warning\">  \n",
     "\n",
-    "\n",
     "**Question**  \n",
     "\n",
     "Créer la liste des `Country_Code` des 20 aéroports les plus hauts.  \n",
@@ -373,7 +381,6 @@
    "metadata": {},
    "source": [
     "<div class = \"alert alert-warning\">  \n",
-    "\n",
     "\n",
     "**Question**  \n",
     "\n",
